objects/Waivers__c.object
<CustomObject>
    <description>Object used to store waiver record for different  milestone.</description>
    <fields>
        <fullName>Add_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <label>Approval Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_being_reviewed__c</fullName>
        <label>Check being reviewed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Has the SOM Methodology been run to determine if the RTx Checkpoint has been reached?</fullName>
                </value>
                <value>
                    <fullName>Has the Packaging Sign Off Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Lockdown File was generated and delivered to ASIC Img/Pkg Team</fullName>
                </value>
                <value>
                    <fullName>Has the Book Usage Report Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Has the Final Vim Edits Module been run successfully?</fullName>
                </value>
                <value>
                    <fullName>Was the Additional Signoff Requirements SOM run w/default parameters/options?</fullName>
                </value>
                <value>
                    <fullName>Does your netlist include the correct ECID for your metal level stack?</fullName>
                </value>
                <value>
                    <fullName>The most recent Thermal/Reliability Analysis performed by the IPRB still applies</fullName>
                </value>
                <value>
                    <fullName>Customer Completed Functional Verification</fullName>
                </value>
                <value>
                    <fullName>Have IBM full-function models been used for simulation?</fullName>
                </value>
                <value>
                    <fullName>Have gate level netlists/Smartmodels been used for simulation?</fullName>
                </value>
                <value>
                    <fullName>Has the SOC Application review been completed?</fullName>
                </value>
                <value>
                    <fullName>Was the IBM Power Mgmt Arch using CPM core used on this design?</fullName>
                </value>
                <value>
                    <fullName>Has this design been analyzed to determine the Soft Error Rate?</fullName>
                </value>
                <value>
                    <fullName>RFS/RFQS closed as Final or Win/Final?</fullName>
                </value>
                <value>
                    <fullName>Support Position field in DIW been set to Support?</fullName>
                </value>
                <value>
                    <fullName>Does the RFS/DIW Quote info reflect technical content of design?</fullName>
                </value>
                <value>
                    <fullName>Cu-08 PDT/LMT has approved use of MPU cells?</fullName>
                </value>
                <value>
                    <fullName>Core Documentation reviewed and followed?</fullName>
                </value>
                <value>
                    <fullName>Has the errata for any cores been reviewed and understood?</fullName>
                </value>
                <value>
                    <fullName>Has the design team read and understood all Meth/Lib alerts?</fullName>
                </value>
                <value>
                    <fullName>if an Asynch Clk review is required, was it conducted?</fullName>
                </value>
                <value>
                    <fullName>if an Asynch Clk review was held, were all actions completed?</fullName>
                </value>
                <value>
                    <fullName>if an IBM IP Application review is required, was it conducted?</fullName>
                </value>
                <value>
                    <fullName>if an IP Appl review was held, were all actions completed?</fullName>
                </value>
                <value>
                    <fullName>Have all Tune bits for IBM PLLs been properly configured?</fullName>
                </value>
                <value>
                    <fullName>Was the Chip Pkg Pin Out Report SOM run w/default parameters/options?</fullName>
                </value>
                <value>
                    <fullName>MABIST timing runs completed successfully?</fullName>
                </value>
                <value>
                    <fullName>Has a Zero Wire Load analysis been completed on the Prelim NL?</fullName>
                </value>
                <value>
                    <fullName>Has the ZWL milestone report been reviewed/approved?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_requesting_the_waiver__c</fullName>
        <label>Date requesting the waiver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Execution__c</fullName>
        <label>Design Execution</label>
        <referenceTo>Design_Execution__c</referenceTo>
        <relationshipLabel>Waivers</relationshipLabel>
        <relationshipName>Waivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Design_System__c</fullName>
        <label>Design System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_RIT_Type__c</fullName>
        <label>Document RIT type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A R</fullName>
                </value>
                <value>
                    <fullName>A/B R</fullName>
                </value>
                <value>
                    <fullName>A/B</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B R</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>DT R</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exact_error_or_warning_statement__c</fullName>
        <label>Exact error or warning statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_On_Yield_Reliability_Testability__c</fullName>
        <label>Impact On Yield Reliability Testability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Library_version__c</fullName>
        <label>Library version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Control_Number__c</fullName>
        <formula>Design_Execution__r.Opportunity__r.Siebel_Opportunity_ID__c</formula>
        <label>Opportunity Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Control_Number__c</fullName>
        <formula>Design_Execution__r.Option__r.Name</formula>
        <label>Option Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_name__c</fullName>
        <label>Part name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profiles_Permission_Sets__c</fullName>
        <label>Profiles/Permission Sets</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIW CDS Admin</fullName>
                </value>
                <value>
                    <fullName>DIW Customer Focal Point</fullName>
                </value>
                <value>
                    <fullName>DIW Design Execution Admin</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Waiver_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sign Off Module Methodology</fullName>
                </value>
                <value>
                    <fullName>Final Shapes Generation and Checking Section</fullName>
                </value>
                <value>
                    <fullName>Packaging Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Final Vim Edits Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Book Usage Report Sign Off Module</fullName>
                </value>
                <value>
                    <fullName>Reliability Data / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Chip Pkg Pin Out Report SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / In System MABIST SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Internal Scan SOM</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / Boolean Equivalence SOM</fullName>
                </value>
                <value>
                    <fullName>Floorplannning and Layout Section / Floorplanning and PD SOM</fullName>
                </value>
                <value>
                    <fullName>IEEE 1149.1 Standard / 1149.1 BSV SOM</fullName>
                </value>
                <value>
                    <fullName>Library and Rule Checks / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Technology Checks Section / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Timing Checks Section / Timing SOM</fullName>
                </value>
                <value>
                    <fullName>3DNoise/ET Coupling / Timing SOM</fullName>
                </value>
                <value>
                    <fullName>Custom Processing Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>Power Analysis / Power SOM</fullName>
                </value>
                <value>
                    <fullName>Testability and Test Generation Section / Test SOM</fullName>
                </value>
                <value>
                    <fullName>Simultaneous Switching Section / Transient Power Distribution SOM</fullName>
                </value>
                <value>
                    <fullName>Electrical Noise Section / Static IR Drop SOM</fullName>
                </value>
                <value>
                    <fullName>Inactive Waiver</fullName>
                </value>
                <value>
                    <fullName>Design Verification Section / In System Test SOM</fullName>
                </value>
                <value>
                    <fullName>Library and Rule Checks Section / Checking SOM</fullName>
                </value>
                <value>
                    <fullName>Chip Data Section / Additional Signoff Requirements SOM</fullName>
                </value>
                <value>
                    <fullName>ROMs and Cores Information Section / ROM personalization SOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tree__c</fullName>
        <label>Tree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Applied_to_with_values_as_below__c</fullName>
        <label>Waiver applied quality level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P Level Only</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_SMEs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Waiver SMEs has upto 10SMEs who can approve waiver.Please click on Waiver SME link to update SME for particular Waivers having same(Waiver Type+section+Check being reviewed).</inlineHelpText>
        <label>Waiver SMEs</label>
        <referenceTo>Waiver_SMEs__c</referenceTo>
        <relationshipLabel>Waivers</relationshipLabel>
        <relationshipName>Waivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waiver_Type__c</fullName>
        <inlineHelpText>Waiver for RTL, RTC, RTM</inlineHelpText>
        <label>Waiver Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RTL</fullName>
                </value>
                <value>
                    <fullName>RTC</fullName>
                </value>
                <value>
                    <fullName>RTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_need_date__c</fullName>
        <label>Waiver need date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WaiversExternalId__c</fullName>
        <externalId>true</externalId>
        <label>WaiversExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waivers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_name__c</columns>
        <columns>Design_Execution__c</columns>
        <columns>Option_Control_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Document_RIT_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>Waiver_Type__c</columns>
        <columns>Section__c</columns>
        <columns>Check_being_reviewed__c</columns>
        <columns>To__c</columns>
        <columns>Waiver_need_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Waivers_Waiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Company__c</columns>
        <columns>Date_requesting_the_waiver__c</columns>
        <columns>Check_being_reviewed__c</columns>
        <columns>Design_Execution__c</columns>
        <columns>Design_System__c</columns>
        <columns>Option_Control_Number__c</columns>
        <columns>Part_name__c</columns>
        <columns>Waiver_need_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Waiver_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>equals</operation>
            <value>DIW Training</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected,Cancel,Review</value>
        </filters>
        <label>Waivers Waiting Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Waivers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>